light bugfixes to make the site more visable on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -113,6 +113,18 @@ button:active {
   text-decoration: underline;
 }
 
+
+/* Media */
+
+@media screen and (max-width: 900px) {
+  #content h2 {
+    line-height:normal;
+  }
+  
+}
+
+
+
 /* Animations */
 
 body {
